include/mcp/c_api/mcp_c_filter_chain.h

/* ============================================================================
 * Chain Types and Enumerations
 * ============================================================================
 */

// Chain execution mode
typedef enum {
  MCP_CHAIN_MODE_SEQUENTIAL = 0,   // Execute filters in order
  MCP_CHAIN_MODE_PARALLEL = 1,     // Execute filters in parallel
  MCP_CHAIN_MODE_CONDITIONAL = 2,  // Execute based on conditions
  MCP_CHAIN_MODE_PIPELINE = 3      // Pipeline mode with buffering
} mcp_chain_execution_mode_t;
// Chain routing strategy
typedef enum {
  MCP_ROUTING_ROUND_ROBIN = 0,   // Round-robin distribution
  MCP_ROUTING_LEAST_LOADED = 1,  // Route to least loaded filter
  MCP_ROUTING_HASH_BASED = 2,    // Hash-based routing
  MCP_ROUTING_PRIORITY = 3,      // Priority-based routing
  MCP_ROUTING_CUSTOM = 99        // Custom routing function
} mcp_routing_strategy_t;
// Filter match condition
typedef enum {
  MCP_MATCH_ALL = 0,     // Match all conditions
  MCP_MATCH_ANY = 1,     // Match any condition
  MCP_MATCH_NONE = 2,    // Match no conditions
  MCP_MATCH_CUSTOM = 99  // Custom match function
} mcp_match_condition_t;
// Chain state
typedef enum {
  MCP_CHAIN_STATE_IDLE = 0,
  MCP_CHAIN_STATE_PROCESSING = 1,
  MCP_CHAIN_STATE_PAUSED = 2,
  MCP_CHAIN_STATE_ERROR = 3,
  MCP_CHAIN_STATE_COMPLETED = 4
} mcp_chain_state_t;
/* ============================================================================
 * Data Structures
 * ============================================================================
 */

// Filter node in chain
typedef struct mcp_filter_node {
  mcp_filter_t filter;
  const char* name;
  uint32_t priority;
  mcp_bool_t enabled;
  mcp_bool_t bypass_on_error;
  mcp_json_value_t config;
} mcp_filter_node_t;
// Chain configuration
typedef struct mcp_chain_config {
  const char* name;
  mcp_chain_execution_mode_t mode;
  mcp_routing_strategy_t routing;
  uint32_t max_parallel;
  uint32_t buffer_size;
  uint32_t timeout_ms;
  mcp_bool_t stop_on_error;
} mcp_chain_config_t;
// Filter condition for conditional execution
typedef struct mcp_filter_condition {
  mcp_match_condition_t match_type;
  const char* field;
  const char* value;
  mcp_filter_t target_filter;
} mcp_filter_condition_t;
// Chain statistics
typedef struct mcp_chain_stats {
  uint64_t total_processed;
  uint64_t total_errors;
  uint64_t total_bypassed;
  double avg_latency_ms;
  double max_latency_ms;
  double throughput_mbps;
  uint32_t active_filters;
} mcp_chain_stats_t;
// Router configuration
typedef struct mcp_router_config {
  mcp_routing_strategy_t strategy;
  uint32_t hash_seed;
  mcp_map_t route_table;  // Map of conditions to chains
  void* custom_router_data;
} mcp_router_config_t;
/* ============================================================================
 * Callback Types
 * ============================================================================
 */

// Custom routing function
typedef mcp_filter_t (*mcp_routing_function_t)(mcp_buffer_handle_t buffer,
                                               const mcp_filter_node_t* nodes,
                                               size_t node_count,
                                               void* user_data);
// Chain event callback
typedef void (*mcp_chain_event_cb)(mcp_filter_chain_t chain,
                                   mcp_chain_state_t old_state,
                                   mcp_chain_state_t new_state,
                                   void* user_data);
// Filter match function
typedef mcp_bool_t (*mcp_filter_match_cb)(
    mcp_buffer_handle_t buffer,
    const mcp_protocol_metadata_t* metadata,
    void* user_data);
/* ============================================================================
 * Advanced Chain Builder
 * ============================================================================
 */

/**
 * Create chain builder with configuration
 * @param dispatcher Event dispatcher
 * @param config Chain configuration
 * @return Builder handle or NULL on error
 */
MCP_API mcp_filter_chain_builder_t mcp_chain_builder_create_ex(
    mcp_dispatcher_t dispatcher, const mcp_chain_config_t* config) MCP_NOEXCEPT;
/**
 * Add filter node to chain
 * @param builder Chain builder
 * @param node Filter node configuration
 * @return MCP_OK on success
 */
MCP_API mcp_result_t
mcp_chain_builder_add_node(mcp_filter_chain_builder_t builder,
                           const mcp_filter_node_t* node) MCP_NOEXCEPT;
/**
 * Add conditional filter
 * @param builder Chain builder
 * @param condition Condition for filter execution
 * @param filter Filter to execute if condition met
 * @return MCP_OK on success
 */
MCP_API mcp_result_t
mcp_chain_builder_add_conditional(mcp_filter_chain_builder_t builder,
                                  const mcp_filter_condition_t* condition,
                                  mcp_filter_t filter) MCP_NOEXCEPT;
/**
 * Add parallel filter group
 * @param builder Chain builder
 * @param filters Array of filters to run in parallel
 * @param count Number of filters
 * @return MCP_OK on success
 */
MCP_API mcp_result_t
mcp_chain_builder_add_parallel_group(mcp_filter_chain_builder_t builder,
                                     const mcp_filter_t* filters,
                                     size_t count) MCP_NOEXCEPT;
/**
 * Set custom routing function
 * @param builder Chain builder
 * @param router Custom routing function
 * @param user_data User data for router
 * @return MCP_OK on success
 */
MCP_API mcp_result_t
mcp_chain_builder_set_router(mcp_filter_chain_builder_t builder,
                             mcp_routing_function_t router,
                             void* user_data) MCP_NOEXCEPT;
/* ============================================================================
 * Chain Management
 * ============================================================================
 */

/**
 * Get chain state
 * @param chain Filter chain
 * @return Current chain state
 */
MCP_API mcp_chain_state_t mcp_chain_get_state(mcp_filter_chain_t chain)
    MCP_NOEXCEPT;
/**
 * Pause chain execution
 * @param chain Filter chain
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_chain_pause(mcp_filter_chain_t chain) MCP_NOEXCEPT;
/**
 * Resume chain execution
 * @param chain Filter chain
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_chain_resume(mcp_filter_chain_t chain) MCP_NOEXCEPT;
/**
 * Reset chain to initial state
 * @param chain Filter chain
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_chain_reset(mcp_filter_chain_t chain) MCP_NOEXCEPT;
/**
 * Enable/disable filter in chain
 * @param chain Filter chain
 * @param filter_name Name of filter to enable/disable
 * @param enabled Enable flag
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_chain_set_filter_enabled(mcp_filter_chain_t chain,
                                                  const char* filter_name,
                                                  mcp_bool_t enabled)
    MCP_NOEXCEPT;
/**
 * Get chain statistics
 * @param chain Filter chain
 * @param stats Output statistics
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_chain_get_stats(mcp_filter_chain_t chain,
                                         mcp_chain_stats_t* stats) MCP_NOEXCEPT;
/**
 * Set chain event callback
 * @param chain Filter chain
 * @param callback Event callback
 * @param user_data User data
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_chain_set_event_callback(mcp_filter_chain_t chain,
                                                  mcp_chain_event_cb callback,
                                                  void* user_data) MCP_NOEXCEPT;
/* ============================================================================
 * Dynamic Chain Composition
 * ============================================================================
 */

/**
 * Create dynamic chain from JSON configuration
 * @param dispatcher Event dispatcher
 * @param json_config JSON configuration
 * @return Chain handle or 0 on error
 */
MCP_API mcp_filter_chain_t mcp_chain_create_from_json(
    mcp_dispatcher_t dispatcher, mcp_json_value_t json_config) MCP_NOEXCEPT;
/**
 * Export chain configuration to JSON
 * @param chain Filter chain
 * @return JSON configuration or NULL on error
 */
MCP_API mcp_json_value_t mcp_chain_export_to_json(mcp_filter_chain_t chain)
    MCP_NOEXCEPT;
/**
 * Clone a filter chain
 * @param chain Source chain
 * @return Cloned chain handle or 0 on error
 */
MCP_API mcp_filter_chain_t mcp_chain_clone(mcp_filter_chain_t chain)
    MCP_NOEXCEPT;
/**
 * Merge two chains
 * @param chain1 First chain
 * @param chain2 Second chain
 * @param mode Merge mode (sequential, parallel)
 * @return Merged chain handle or 0 on error
 */
MCP_API mcp_filter_chain_t mcp_chain_merge(mcp_filter_chain_t chain1,
                                           mcp_filter_chain_t chain2,
                                           mcp_chain_execution_mode_t mode)
    MCP_NOEXCEPT;
/* ============================================================================
 * Chain Router
 * ============================================================================
 */

typedef struct mcp_chain_router* mcp_chain_router_t;
/**
 * Create chain router
 * @param config Router configuration
 * @return Router handle or NULL on error
 */
MCP_API mcp_chain_router_t
mcp_chain_router_create(const mcp_router_config_t* config) MCP_NOEXCEPT;
/**
 * Add route to router
 * @param router Chain router
 * @param condition Match condition
 * @param chain Target chain
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_chain_router_add_route(mcp_chain_router_t router,
                                                mcp_filter_match_cb condition,
                                                mcp_filter_chain_t chain)
    MCP_NOEXCEPT;
/**
 * Route buffer through appropriate chain
 * @param router Chain router
 * @param buffer Buffer to route
 * @param metadata Protocol metadata
 * @return Selected chain or 0 if no match
 */
MCP_API mcp_filter_chain_t
mcp_chain_router_route(mcp_chain_router_t router,
                       mcp_buffer_handle_t buffer,
                       const mcp_protocol_metadata_t* metadata) MCP_NOEXCEPT;
/**
 * Destroy chain router
 * @param router Chain router
 */
MCP_API void mcp_chain_router_destroy(mcp_chain_router_t router) MCP_NOEXCEPT;
/* ============================================================================
 * Chain Pool for Load Balancing
 * ============================================================================
 */

typedef struct mcp_chain_pool* mcp_chain_pool_t;
/**
 * Create chain pool for load balancing
 * @param base_chain Template chain
 * @param pool_size Number of chain instances
 * @param strategy Load balancing strategy
 * @return Pool handle or NULL on error
 */
MCP_API mcp_chain_pool_t mcp_chain_pool_create(mcp_filter_chain_t base_chain,
                                               size_t pool_size,
                                               mcp_routing_strategy_t strategy)
    MCP_NOEXCEPT;
/**
 * Get next chain from pool
 * @param pool Chain pool
 * @return Next chain based on strategy
 */
MCP_API mcp_filter_chain_t mcp_chain_pool_get_next(mcp_chain_pool_t pool)
    MCP_NOEXCEPT;
/**
 * Return chain to pool
 * @param pool Chain pool
 * @param chain Chain to return
 */
MCP_API void mcp_chain_pool_return(mcp_chain_pool_t pool,
                                   mcp_filter_chain_t chain) MCP_NOEXCEPT;
/**
 * Get pool statistics
 * @param pool Chain pool
 * @param active Output: active chains
 * @param idle Output: idle chains
 * @param total_processed Output: total processed
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_chain_pool_get_stats(mcp_chain_pool_t pool,
                                              size_t* active,
                                              size_t* idle,
                                              uint64_t* total_processed)
    MCP_NOEXCEPT;
/**
 * Destroy chain pool
 * @param pool Chain pool
 */
MCP_API void mcp_chain_pool_destroy(mcp_chain_pool_t pool) MCP_NOEXCEPT;
/* ============================================================================
 * Chain Optimization
 * ============================================================================
 */

/**
 * Optimize chain by removing redundant filters
 * @param chain Filter chain
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_chain_optimize(mcp_filter_chain_t chain) MCP_NOEXCEPT;
/**
 * Reorder filters for optimal performance
 * @param chain Filter chain
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_chain_reorder_filters(mcp_filter_chain_t chain)
    MCP_NOEXCEPT;